# surveys

surveyhero/: Cargo.toml
surveyhero/src/: api.rs  cli.rs  lib.rs  markdown.rs  txt_writer.rs
surveys/2025/safety-critical/: questions.md
typst/template/: template.typ
typst/typst_gen/: Cargo.toml
typst/typst_gen/src/: cli.rs  main.rs  markdown.rs  question_parser.rs  typst_wrapper.rs
